--- a/TestAutomationFramework.DemoUI.Test/TestAutomationFramework.DemoUI.Test.csproj
+++ b/TestAutomationFramework.DemoUI.Test/TestAutomationFramework.DemoUI.Test.csproj
@@ -15,10 +15,14 @@
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+    <PackageReference Include="SpecFlow" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TestAutomationFramework.Core.WebUI\TestAutomationFramework.Core.WebUI.csproj" />
+    <ProjectReference Include="..\TestAutomationFramework.DemoUi\TestAutomationFramework.DemoUi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,9 +30,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Test_Cases\" />
     <Folder Include="Data_Set\" />
     <Folder Include="Results\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\applicationConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\FrameworkSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
