--- a/TestAutomationFramework.DemoUi/TestAutomationFramework.DemoUi.csproj
+++ b/TestAutomationFramework.DemoUi/TestAutomationFramework.DemoUi.csproj
@@ -15,6 +15,13 @@
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.27.0" />
+    <PackageReference Include="SpecFlow" Version="3.9.74" />
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestAutomationFramework.Core.WebUI\TestAutomationFramework.Core.WebUI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
